yaml_dockerfile/k8s-yaml/efk/kibana-dp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  namespace: efk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
      - name: kibana
#        image: harbor.qytanghost.com/efk/kibana:7.14.2
        image: harbor.qytanghost.com/efk/kibana:6.8.13
        resources:
          requests:
            cpu: "2000m"
            memory: "3Gi"
          limits:
            cpu: "4000m"
            memory: "6Gi"
        ports:
        - name: ui
          containerPort: 5601
        volumeMounts:
        - mountPath: /usr/share/kibana/data
          name: kibana-data
      volumes:
      - name: kibana-data
        persistentVolumeClaim:
          claimName: kibana-pvc
          readOnly: false
