yaml_dockerfile/k8s-yaml/efk/elasticsearch-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  namespace: efk
spec:
  ports:
  - port: 9200
    protocol: TCP
    targetPort: 9200
    name: api
  - port: 9300
    protocol: TCP
    targetPort: 9300
    name: cluster
  selector:
    app: elasticsearch
