yaml_dockerfile/k8s-yaml/efk/kibana-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: efk
spec:
  ports:
  - port: 5601
    protocol: TCP
    targetPort: 5601
    name: ui
  selector:
    app: kibana
