yaml_dockerfile/k8s-yaml/efk/kibana-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kibana
  namespace: efk
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`kibana.qytangk8s.com`)
    kind: Rule
    services:
    - name: kibana
      port: 5601
